<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navi_multi_goals_pub_rviz_plugin</name>
  <version>1.0.7</version>
  <description>The navi_multi_goals_pub_rviz_plugin package</description>
  <!--  One maintainer tag required, multiple allowed, one person per tag  -->
  <!--  Example:   -->
  <!--  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>  -->
  <maintainer email="ryoo@todo.todo">ryoo</maintainer>
  <!--  One license tag required, multiple allowed, one license per tag  -->
  <!--  Commonly used license strings:  -->
  <!--    BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3  -->
  <license>TODO</license>
  <!--  Url tags are optional, but mutiple are allowed, one per tag  -->
  <!--  Optional attribute type can be: website, bugtracker, or repository  -->
  <!--  Example:  -->
  <!--  <url type="website">http://wiki.ros.org/navi_multi_goals_pub_rviz_plugin</url>  -->
  <!--  Author tags are optional, mutiple are allowed, one per tag  -->
  <!--  Authors do not have to be maintianers, but could be  -->
  <!--  Example:  -->
  <!--  <author email="jane.doe@example.com">Jane Doe</author>  -->
  <!--  The *_depend tags are used to specify dependencies  -->
  <!--  Dependencies can be catkin packages or system dependencies  -->
  <!--  Examples:  -->
  <!--  Use build_depend for packages you need at compile time:  -->
  <!--    <build_depend>message_generation</build_depend>  -->
  <!--  Use buildtool_depend for build tool packages:  -->
  <!--    <buildtool_depend>catkin</buildtool_depend>  -->
  <!--  Use run_depend for packages you need at runtime:  -->
  <!--    <run_depend>message_runtime</run_depend>  -->
  <!--  Use test_depend for packages you need only for testing:  -->
  <!--    <test_depend>gtest</test_depend>  -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>rviz_common</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>pp_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
